--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,16 @@
 }
 
 
+.grid-con {
+	display: grid;
+	grid-template-columns: repeat(12, 122px);
+	grid-column-gap: 40px;
+	padding-left: 140px;
+	padding-right: 140px;
+}
+
+
+
 h1{
     background-color: #353534;
     color:white;
@@ -11,3 +21,44 @@ h1{
     font-size:x-large;
     text-align: center;
 }
+
+#gallery-controls {
+	margin-top: 200px;
+	grid-column: 6/8;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+    
+	
+  }
+
+
+  .title-name{
+    color: grey;
+    font-size: 22px;
+  }
+  
+  .card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
+  
+  .card button:hover {
+    opacity: 0.7;
+  }
