--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,10 @@
 .grid-con {
 	display: grid;
 	grid-template-columns: repeat(12, 122px);
-	grid-column-gap: 40px;
+	grid-column-gap: 20px;
 	padding-left: 140px;
 	padding-right: 140px;
+  padding-top: 50px;
 }
 
 
@@ -30,8 +31,14 @@ h1{
 	align-items: center;
 }
 
+.gallery-box{
+	grid-column: span 4 / span 4;
+}
 
-.card {
+	
+
+
+#card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
     margin: auto;
@@ -47,7 +54,7 @@ h1{
     font-size: 22px;
   }
   
-  .card button {
+  #card button {
     border: none;
     outline: 0;
     padding: 12px;
@@ -59,6 +66,6 @@ h1{
     font-size: 18px;
   }
   
-  .card button:hover {
+  #card button:hover {
     opacity: 0.7;
   }
