--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
     display: none;
 }
 
-
+/*
 .grid-con {
 	display: grid;
 	grid-template-columns: repeat(12, 122px);
@@ -15,6 +15,7 @@
 	padding-right: 140px;
   padding-top: 50px;
 }
+*/
 
 .heading {
   padding: 60px;
@@ -24,8 +25,7 @@
   font-size: 30px;
 }
 
-<<<<<<< Updated upstream
-=======
+
 body{
   background-color: #000;
 }
@@ -36,7 +36,7 @@ body{
 	grid-column: span 2 / span 2;
 }
 
->>>>>>> Stashed changes
+
 #card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
@@ -62,7 +62,7 @@ body{
     text-align: center;
     cursor: pointer;
     width: 100%;
-      font-size: 18px;
+    font-size: 18px;
   }
   
   #card button:hover {
@@ -74,4 +74,20 @@ body{
     background-color: white;
     color:black;
     text-align: center;
+  }
+
+  .column {
+    float: left;
+
+    width: 20%;
+    padding: 5px;
+    height: 300px; /* Should be removed. Only for demonstration */
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+
+    display: table;
+    clear: both;
   }
