--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,8 @@ body{
     text-align: center;
     cursor: pointer;
     width: 100%;
-    font-size: 18px;
+      font-size: 18px;
+  }
   
   #card button:hover {
     opacity: 0.7;
